v1.7.12 (14/09/2020)
- bug fix: problem with recognizing AIMLESS logfiles during preparation of MMCIF files

v1.7.11 (09/09/2020)
- bug fix: preparation of mmcif files: run aimless in onlymerge mode if only json file available

v1.7.10 (08/09/2020)
- bug fix - preparation of mmcif files for deposition: enable usage of event mtz files which were generated during 'BUSTER' export routine

v1.7.9 (03/09/2020)
- change 'Open COOT' to 'Open COOT - REFMAC refinement -' in Refinement action box

v1.7.8 (01/09/2020)
- bug fix: string formatting error during restraints generation on local machine
- added scanchirals option to rhofit command in fit_ligands function
- bug fix: added 'module load buster' to fit_ligands function

v1.7.7 (22/07/2020)
- bug fix: logical error in creation of restraints script when adding 'module load ccp4/phenix' command
- removed phenix.reduce step from restraints generation

v1.7.6 (22/07/2020)
- bug fix: added 'module load ccp4/phenix' to restraints script in case not part of user bashrc file

v1.7.5 (21/07/2020)
- bug fix: remove obsolete 'module load mx' statement from xce_<restraints_prg> script which currently loads a gemmi incompatible ccp4 version

v1.7.4 (21/07/2020)
- bug fix: selected results not linked after parsing of auto-processing results
- enabled updates of message & progress bar during scoring of auto-processing results
- enabled updates of message & progress bar during DB update of pinIDs

v1.7.3 (20/07/2020)
- bug fix: ignore large temporary files in get_gda_barcodes which lead to memory errors
- removed obsolete PROASIS menu item
- bug fix: xce now reads already parsed auto-processing results correctly to speed up parsing

v1.7.2 (16/07/2020)
- show molprobity to-do list generated by buster-report in XCE COOT interface

v1.7.1 (13/07/2020)
- select auto-refinement from action box not from preferences

v1.7.0 (29/06/2020)
- implemented new pandda export routine which takes advantage of gemmi
- updated html export accordingly